# rdq

./: Cargo.toml  blah
src/: drain.rs  lib.rs
src/drain/: sync.rs
src/drain2/: sync.rs
src/queue/: backend.rs  drain.rs  error.rs  item.rs  mod.rs  queue.rs
src/queue/backend/: combine.rs  stream.rs
tests/: README.md  stream.rs  util.rs
tests/util/: mod.rs
